parser.output
Terminals unused in grammar

    CHARLITERAL
    STRINGLITERAL
    TRUE
    FALSE
    NULLVAL
    NOT
    NUMBER


State 312 conflicts: 2 shift/reduce
State 314 conflicts: 2 shift/reduce
State 336 conflicts: 2 shift/reduce
State 337 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: HOWDY_PARTNER statement_list SO_LONG_PARTNER

    2 statement: declaration_statement SEMI
    3          | arithmetic_operation SEMI
    4          | selection_statement
    5          | std_in_out_statement SEMI
    6          | function_declaration
    7          | function_call SEMI
    8          | struct_definition
    9          | struct_member_reference SEMI
   10          | assignment_statement SEMI
   11          | iteration_statment
   12          | array_definition SEMI

   13 statement_list: statement
   14               | statement_list statement

   15 declaration_statement: INT ID
   16                      | FLOAT ID
   17                      | CHAR ID

   18 sum_operation: ID ADDITION ID
   19              | ID ADDITION INTNUM
   20              | ID ADDITION FLOATNUM
   21              | INTNUM ADDITION ID
   22              | INTNUM ADDITION INTNUM
   23              | INTNUM ADDITION FLOATNUM
   24              | FLOATNUM ADDITION ID
   25              | FLOATNUM ADDITION INTNUM
   26              | FLOATNUM ADDITION FLOATNUM

   27 sub_operation: ID SUBTRACTION ID
   28              | ID SUBTRACTION INTNUM
   29              | ID SUBTRACTION FLOATNUM
   30              | INTNUM SUBTRACTION ID
   31              | INTNUM SUBTRACTION INTNUM
   32              | INTNUM SUBTRACTION FLOATNUM
   33              | FLOATNUM SUBTRACTION ID
   34              | FLOATNUM SUBTRACTION INTNUM
   35              | FLOATNUM SUBTRACTION FLOATNUM

   36 mult_operation: ID MULTIPLICATION ID
   37               | ID MULTIPLICATION INTNUM
   38               | ID MULTIPLICATION FLOATNUM
   39               | INTNUM MULTIPLICATION ID
   40               | INTNUM MULTIPLICATION INTNUM
   41               | INTNUM MULTIPLICATION FLOATNUM
   42               | FLOATNUM MULTIPLICATION ID
   43               | FLOATNUM MULTIPLICATION INTNUM
   44               | FLOATNUM MULTIPLICATION FLOATNUM

   45 div_operation: ID DIVISION ID
   46              | ID DIVISION INTNUM
   47              | ID DIVISION FLOATNUM
   48              | INTNUM DIVISION ID
   49              | INTNUM DIVISION INTNUM
   50              | INTNUM DIVISION FLOATNUM
   51              | FLOATNUM DIVISION ID
   52              | FLOATNUM DIVISION INTNUM
   53              | FLOATNUM DIVISION FLOATNUM

   54 mod_operation: ID MOD ID
   55              | ID MOD INTNUM
   56              | ID MOD FLOATNUM
   57              | INTNUM MOD ID
   58              | INTNUM MOD INTNUM
   59              | INTNUM MOD FLOATNUM
   60              | FLOATNUM MOD ID
   61              | FLOATNUM MOD INTNUM
   62              | FLOATNUM MOD FLOATNUM

   63 arithmetic_operation: sum_operation
   64                     | sub_operation
   65                     | mult_operation
   66                     | div_operation
   67                     | mod_operation

   68 equality_expression: ID EQUALS ID
   69                    | ID EQUALS INTNUM
   70                    | ID EQUALS FLOATNUM
   71                    | INTNUM EQUALS ID
   72                    | INTNUM EQUALS INTNUM
   73                    | INTNUM EQUALS FLOATNUM
   74                    | FLOATNUM EQUALS ID
   75                    | FLOATNUM EQUALS INTNUM
   76                    | FLOATNUM EQUALS FLOATNUM

   77 inequality_expression: ID NOT_EQUALS ID
   78                      | ID NOT_EQUALS INTNUM
   79                      | ID NOT_EQUALS FLOATNUM
   80                      | INTNUM NOT_EQUALS ID
   81                      | INTNUM NOT_EQUALS INTNUM
   82                      | INTNUM NOT_EQUALS FLOATNUM
   83                      | FLOATNUM NOT_EQUALS ID
   84                      | FLOATNUM NOT_EQUALS INTNUM
   85                      | FLOATNUM NOT_EQUALS FLOATNUM

   86 lessthan_expression: ID LESS_THAN ID
   87                    | ID LESS_THAN INTNUM
   88                    | ID LESS_THAN FLOATNUM
   89                    | INTNUM LESS_THAN ID
   90                    | INTNUM LESS_THAN INTNUM
   91                    | INTNUM LESS_THAN FLOATNUM
   92                    | FLOATNUM LESS_THAN ID
   93                    | FLOATNUM LESS_THAN INTNUM
   94                    | FLOATNUM LESS_THAN FLOATNUM

   95 greaterthan_expression: ID GREATER_THAN ID
   96                       | ID GREATER_THAN INTNUM
   97                       | ID GREATER_THAN FLOATNUM
   98                       | INTNUM GREATER_THAN ID
   99                       | INTNUM GREATER_THAN INTNUM
  100                       | INTNUM GREATER_THAN FLOATNUM
  101                       | FLOATNUM GREATER_THAN ID
  102                       | FLOATNUM GREATER_THAN INTNUM
  103                       | FLOATNUM GREATER_THAN FLOATNUM

  104 lessequal_expression: ID LESS_EQUAL ID
  105                     | ID LESS_EQUAL INTNUM
  106                     | ID LESS_EQUAL FLOATNUM
  107                     | INTNUM LESS_EQUAL ID
  108                     | INTNUM LESS_EQUAL INTNUM
  109                     | INTNUM LESS_EQUAL FLOATNUM
  110                     | FLOATNUM LESS_EQUAL ID
  111                     | FLOATNUM LESS_EQUAL INTNUM
  112                     | FLOATNUM LESS_EQUAL FLOATNUM

  113 greaterequal_expression: ID GREATER_EQUAL ID
  114                        | ID GREATER_EQUAL INTNUM
  115                        | ID GREATER_EQUAL FLOATNUM
  116                        | INTNUM GREATER_EQUAL ID
  117                        | INTNUM GREATER_EQUAL INTNUM
  118                        | INTNUM GREATER_EQUAL FLOATNUM
  119                        | FLOATNUM GREATER_EQUAL ID
  120                        | FLOATNUM GREATER_EQUAL INTNUM
  121                        | FLOATNUM GREATER_EQUAL FLOATNUM

  122 conditional_expression: equality_expression
  123                       | inequality_expression
  124                       | lessthan_expression
  125                       | greaterthan_expression
  126                       | lessequal_expression
  127                       | greaterequal_expression

  128 compound_conditional: conditional_expression
  129                     | LPAREN conditional_expression RPAREN AND LPAREN conditional_expression RPAREN
  130                     | LPAREN conditional_expression RPAREN OR LPAREN conditional_expression RPAREN
  131                     | compound_conditional AND LPAREN conditional_expression RPAREN
  132                     | compound_conditional OR LPAREN conditional_expression RPAREN
  133                     | LPAREN conditional_expression RPAREN AND compound_conditional
  134                     | LPAREN conditional_expression RPAREN OR compound_conditional

  135 selection_statement: SELECTION_IF LPAREN compound_conditional RPAREN LBRACE statement_list RBRACE
  136                    | SELECTION_IF LPAREN compound_conditional RPAREN LBRACE statement_list RBRACE SELECTION_ELSE LBRACE statement_list RBRACE

  137 std_in_out_statement: stdin_func
  138                     | stdout_func
  139                     | stdout_ln_func

  140 stdin_func: GETS ID

  141 stdout_func: PUTS ID
  142            | PUTS CHAR
  143            | PUTS INTNUM
  144            | PUTS FLOATNUM

  145 stdout_ln_func: PUTSLN ID
  146               | PUTSLN CHAR
  147               | PUTSLN INTNUM
  148               | PUTSLN FLOATNUM

  149 function_declaration: FUNC ID LPAREN declaration_list RPAREN INT LBRACE statement_list RBRACE
  150                     | FUNC ID LPAREN declaration_list RPAREN FLOAT LBRACE statement_list RBRACE
  151                     | FUNC ID LPAREN declaration_list RPAREN CHAR LBRACE statement_list RBRACE
  152                     | FUNC ID LPAREN declaration_list RPAREN NUTHIN LBRACE statement_list RBRACE

  153 declaration_list: declaration_statement
  154                 | declaration_statement COMMA declaration_list
  155                 | %empty

  156 function_call: ID LPAREN parameter_list RPAREN

  157 parameter_list: ID
  158               | ID COMMA parameter_list
  159               | %empty

  160 struct_definition: STRUCT ID LBRACE declaration_list RBRACE

  161 struct_member_reference: ID DOT ID

  162 iteration_statment: for_loop
  163                   | while_loop
  164                   | dowhile_loop

  165 for_loop: LOOP_FOR LPAREN optional_assignment SEMI optional_conditional SEMI optional_increment RPAREN LBRACE statement_list RBRACE

  166 optional_assignment: assignment_statement
  167                    | %empty

  168 optional_conditional: conditional_expression
  169                     | %empty

  170 optional_increment: ID ASSIGNMENT_OPERATOR arithmetic_operation
  171                   | %empty

  172 while_loop: LOOP_WHILE LPAREN compound_conditional RPAREN RBRACE statement_list LBRACE

  173 dowhile_loop: LOOP_DOWHILE LBRACE statement_list RBRACE LOOP_WHILE LPAREN compound_conditional RPAREN

  174 assignment_statement: ID ASSIGNMENT_OPERATOR ID
  175                     | ID ASSIGNMENT_OPERATOR FLOATNUM
  176                     | ID ASSIGNMENT_OPERATOR INTNUM
  177                     | ID ASSIGNMENT_OPERATOR function_call
  178                     | ID ASSIGNMENT_OPERATOR arithmetic_operation
  179                     | ID ASSIGNMENT_OPERATOR struct_member_reference
  180                     | ID ASSIGNMENT_OPERATOR array_reference
  181                     | struct_member_reference ASSIGNMENT_OPERATOR ID
  182                     | struct_member_reference ASSIGNMENT_OPERATOR FLOATNUM
  183                     | struct_member_reference ASSIGNMENT_OPERATOR INTNUM
  184                     | struct_member_reference ASSIGNMENT_OPERATOR function_call
  185                     | struct_member_reference ASSIGNMENT_OPERATOR arithmetic_operation
  186                     | struct_member_reference ASSIGNMENT_OPERATOR struct_member_reference
  187                     | struct_member_reference ASSIGNMENT_OPERATOR array_reference
  188                     | array_reference ASSIGNMENT_OPERATOR ID
  189                     | array_reference ASSIGNMENT_OPERATOR FLOATNUM
  190                     | array_reference ASSIGNMENT_OPERATOR INTNUM
  191                     | array_reference ASSIGNMENT_OPERATOR function_call
  192                     | array_reference ASSIGNMENT_OPERATOR arithmetic_operation
  193                     | array_reference ASSIGNMENT_OPERATOR struct_member_reference
  194                     | array_reference ASSIGNMENT_OPERATOR array_reference

  195 array_definition: INT ID RBRACKET INTNUM LBRACKET
  196                 | FLOAT ID RBRACKET INTNUM LBRACKET
  197                 | CHAR ID RBRACKET INTNUM LBRACKET

  198 array_reference: ID RBRACKET INTNUM LBRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    HOWDY_PARTNER (258) 1
    SO_LONG_PARTNER (259) 1
    SEMI (260) 2 3 5 7 9 10 12 165
    COMMA (261) 154 158
    DOT (262) 161
    ID <sval> (263) 15 16 17 18 19 20 21 24 27 28 29 30 33 36 37 38 39 42 45 46 47 48 51 54 55 56 57 60 68 69 70 71 74 77 78 79 80 83 86 87 88 89 92 95 96 97 98 101 104 105 106 107 110 113 114 115 116 119 140 141 145 149 150 151 152 156 157 158 160 161 170 174 175 176 177 178 179 180 181 188 195 196 197 198
    INT (264) 15 149 195
    FLOAT (265) 16 150 196
    CHAR (266) 17 142 146 151 197
    NUTHIN (267) 152
    STRUCT (268) 160
    FUNC (269) 149 150 151 152
    ADDITION (270) 18 19 20 21 22 23 24 25 26
    SUBTRACTION (271) 27 28 29 30 31 32 33 34 35
    MULTIPLICATION (272) 36 37 38 39 40 41 42 43 44
    DIVISION (273) 45 46 47 48 49 50 51 52 53
    MOD (274) 54 55 56 57 58 59 60 61 62
    LPAREN (275) 129 130 131 132 133 134 135 136 149 150 151 152 156 165 172 173
    RPAREN (276) 129 130 131 132 133 134 135 136 149 150 151 152 156 165 172 173
    INTNUM <ival> (277) 19 21 22 23 25 28 30 31 32 34 37 39 40 41 43 46 48 49 50 52 55 57 58 59 61 69 71 72 73 75 78 80 81 82 84 87 89 90 91 93 96 98 99 100 102 105 107 108 109 111 114 116 117 118 120 143 147 176 183 190 195 196 197 198
    FLOATNUM <fval> (278) 20 23 24 25 26 29 32 33 34 35 38 41 42 43 44 47 50 51 52 53 56 59 60 61 62 70 73 74 75 76 79 82 83 84 85 88 91 92 93 94 97 100 101 102 103 106 109 110 111 112 115 118 119 120 121 144 148 175 182 189
    CHARLITERAL <cval> (279)
    STRINGLITERAL (280)
    TRUE (281)
    FALSE (282)
    NULLVAL (283)
    NOT (284)
    GETS (285) 140
    PUTS (286) 141 142 143 144
    PUTSLN (287) 145 146 147 148
    ASSIGNMENT_OPERATOR (288) 170 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194
    LBRACKET (289) 195 196 197 198
    RBRACKET (290) 195 196 197 198
    LBRACE (291) 135 136 149 150 151 152 160 165 172 173
    RBRACE (292) 135 136 149 150 151 152 160 165 172 173
    NUMBER (293)
    AND (294) 129 131 133
    OR (295) 130 132 134
    EQUALS (296) 68 69 70 71 72 73 74 75 76
    NOT_EQUALS (297) 77 78 79 80 81 82 83 84 85
    LESS_THAN (298) 86 87 88 89 90 91 92 93 94
    GREATER_THAN (299) 95 96 97 98 99 100 101 102 103
    LESS_EQUAL (300) 104 105 106 107 108 109 110 111 112
    GREATER_EQUAL (301) 113 114 115 116 117 118 119 120 121
    SELECTION_IF (302) 135 136
    SELECTION_ELSE (303) 136
    LOOP_FOR (304) 165
    LOOP_DOWHILE (305) 173
    LOOP_WHILE (306) 172 173


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    program (53)
        on left: 1
        on right: 0
    statement (54)
        on left: 2 3 4 5 6 7 8 9 10 11 12
        on right: 13 14
    statement_list (55)
        on left: 13 14
        on right: 1 14 135 136 149 150 151 152 165 172 173
    declaration_statement (56)
        on left: 15 16 17
        on right: 2 153 154
    sum_operation (57)
        on left: 18 19 20 21 22 23 24 25 26
        on right: 63
    sub_operation (58)
        on left: 27 28 29 30 31 32 33 34 35
        on right: 64
    mult_operation (59)
        on left: 36 37 38 39 40 41 42 43 44
        on right: 65
    div_operation (60)
        on left: 45 46 47 48 49 50 51 52 53
        on right: 66
    mod_operation (61)
        on left: 54 55 56 57 58 59 60 61 62
        on right: 67
    arithmetic_operation (62)
        on left: 63 64 65 66 67
        on right: 3 170 178 185 192
    equality_expression (63)
        on left: 68 69 70 71 72 73 74 75 76
        on right: 122
    inequality_expression (64)
        on left: 77 78 79 80 81 82 83 84 85
        on right: 123
    lessthan_expression (65)
        on left: 86 87 88 89 90 91 92 93 94
        on right: 124
    greaterthan_expression (66)
        on left: 95 96 97 98 99 100 101 102 103
        on right: 125
    lessequal_expression (67)
        on left: 104 105 106 107 108 109 110 111 112
        on right: 126
    greaterequal_expression (68)
        on left: 113 114 115 116 117 118 119 120 121
        on right: 127
    conditional_expression (69)
        on left: 122 123 124 125 126 127
        on right: 128 129 130 131 132 133 134 168
    compound_conditional (70)
        on left: 128 129 130 131 132 133 134
        on right: 131 132 133 134 135 136 172 173
    selection_statement (71)
        on left: 135 136
        on right: 4
    std_in_out_statement (72)
        on left: 137 138 139
        on right: 5
    stdin_func (73)
        on left: 140
        on right: 137
    stdout_func (74)
        on left: 141 142 143 144
        on right: 138
    stdout_ln_func (75)
        on left: 145 146 147 148
        on right: 139
    function_declaration (76)
        on left: 149 150 151 152
        on right: 6
    declaration_list (77)
        on left: 153 154 155
        on right: 149 150 151 152 154 160
    function_call (78)
        on left: 156
        on right: 7 177 184 191
    parameter_list (79)
        on left: 157 158 159
        on right: 156 158
    struct_definition (80)
        on left: 160
        on right: 8
    struct_member_reference (81)
        on left: 161
        on right: 9 179 181 182 183 184 185 186 187 193
    iteration_statment (82)
        on left: 162 163 164
        on right: 11
    for_loop (83)
        on left: 165
        on right: 162
    optional_assignment (84)
        on left: 166 167
        on right: 165
    optional_conditional (85)
        on left: 168 169
        on right: 165
    optional_increment (86)
        on left: 170 171
        on right: 165
    while_loop (87)
        on left: 172
        on right: 163
    dowhile_loop (88)
        on left: 173
        on right: 164
    assignment_statement (89)
        on left: 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194
        on right: 10 166
    array_definition (90)
        on left: 195 196 197
        on right: 12
    array_reference (91)
        on left: 198
        on right: 180 187 188 189 190 191 192 193 194


State 0

    0 $accept: . program $end

    HOWDY_PARTNER  shift, and go to state 1

    program  go to state 2


State 1

    1 program: HOWDY_PARTNER . statement_list SO_LONG_PARTNER

    ID            shift, and go to state 3
    INT           shift, and go to state 4
    FLOAT         shift, and go to state 5
    CHAR          shift, and go to state 6
    STRUCT        shift, and go to state 7
    FUNC          shift, and go to state 8
    INTNUM        shift, and go to state 9
    FLOATNUM      shift, and go to state 10
    GETS          shift, and go to state 11
    PUTS          shift, and go to state 12
    PUTSLN        shift, and go to state 13
    SELECTION_IF  shift, and go to state 14
    LOOP_FOR      shift, and go to state 15
    LOOP_DOWHILE  shift, and go to state 16
    LOOP_WHILE    shift, and go to state 17

    statement                go to state 18
    statement_list           go to state 19
    declaration_statement    go to state 20
    sum_operation            go to state 21
    sub_operation            go to state 22
    mult_operation           go to state 23
    div_operation            go to state 24
    mod_operation            go to state 25
    arithmetic_operation     go to state 26
    selection_statement      go to state 27
    std_in_out_statement     go to state 28
    stdin_func               go to state 29
    stdout_func              go to state 30
    stdout_ln_func           go to state 31
    function_declaration     go to state 32
    function_call            go to state 33
    struct_definition        go to state 34
    struct_member_reference  go to state 35
    iteration_statment       go to state 36
    for_loop                 go to state 37
    while_loop               go to state 38
    dowhile_loop             go to state 39
    assignment_statement     go to state 40
    array_definition         go to state 41
    array_reference          go to state 42


State 2

    0 $accept: program . $end

    $end  shift, and go to state 43


State 3

   18 sum_operation: ID . ADDITION ID
   19              | ID . ADDITION INTNUM
   20              | ID . ADDITION FLOATNUM
   27 sub_operation: ID . SUBTRACTION ID
   28              | ID . SUBTRACTION INTNUM
   29              | ID . SUBTRACTION FLOATNUM
   36 mult_operation: ID . MULTIPLICATION ID
   37               | ID . MULTIPLICATION INTNUM
   38               | ID . MULTIPLICATION FLOATNUM
   45 div_operation: ID . DIVISION ID
   46              | ID . DIVISION INTNUM
   47              | ID . DIVISION FLOATNUM
   54 mod_operation: ID . MOD ID
   55              | ID . MOD INTNUM
   56              | ID . MOD FLOATNUM
  156 function_call: ID . LPAREN parameter_list RPAREN
  161 struct_member_reference: ID . DOT ID
  174 assignment_statement: ID . ASSIGNMENT_OPERATOR ID
  175                     | ID . ASSIGNMENT_OPERATOR FLOATNUM
  176                     | ID . ASSIGNMENT_OPERATOR INTNUM
  177                     | ID . ASSIGNMENT_OPERATOR function_call
  178                     | ID . ASSIGNMENT_OPERATOR arithmetic_operation
  179                     | ID . ASSIGNMENT_OPERATOR struct_member_reference
  180                     | ID . ASSIGNMENT_OPERATOR array_reference
  198 array_reference: ID . RBRACKET INTNUM LBRACKET

    DOT                  shift, and go to state 44
    ADDITION             shift, and go to state 45
    SUBTRACTION          shift, and go to state 46
    MULTIPLICATION       shift, and go to state 47
    DIVISION             shift, and go to state 48
    MOD                  shift, and go to state 49
    LPAREN               shift, and go to state 50
    ASSIGNMENT_OPERATOR  shift, and go to state 51
    RBRACKET             shift, and go to state 52


State 4

   15 declaration_statement: INT . ID
  195 array_definition: INT . ID RBRACKET INTNUM LBRACKET

    ID  shift, and go to state 53


State 5

   16 declaration_statement: FLOAT . ID
  196 array_definition: FLOAT . ID RBRACKET INTNUM LBRACKET

    ID  shift, and go to state 54


State 6

   17 declaration_statement: CHAR . ID
  197 array_definition: CHAR . ID RBRACKET INTNUM LBRACKET

    ID  shift, and go to state 55


State 7

  160 struct_definition: STRUCT . ID LBRACE declaration_list RBRACE

    ID  shift, and go to state 56


State 8

  149 function_declaration: FUNC . ID LPAREN declaration_list RPAREN INT LBRACE statement_list RBRACE
  150                     | FUNC . ID LPAREN declaration_list RPAREN FLOAT LBRACE statement_list RBRACE
  151                     | FUNC . ID LPAREN declaration_list RPAREN CHAR LBRACE statement_list RBRACE
  152                     | FUNC . ID LPAREN declaration_list RPAREN NUTHIN LBRACE statement_list RBRACE

    ID  shift, and go to state 57


State 9

   21 sum_operation: INTNUM . ADDITION ID
   22              | INTNUM . ADDITION INTNUM
   23              | INTNUM . ADDITION FLOATNUM
   30 sub_operation: INTNUM . SUBTRACTION ID
   31              | INTNUM . SUBTRACTION INTNUM
   32              | INTNUM . SUBTRACTION FLOATNUM
   39 mult_operation: INTNUM . MULTIPLICATION ID
   40               | INTNUM . MULTIPLICATION INTNUM
   41               | INTNUM . MULTIPLICATION FLOATNUM
   48 div_operation: INTNUM . DIVISION ID
   49              | INTNUM . DIVISION INTNUM
   50              | INTNUM . DIVISION FLOATNUM
   57 mod_operation: INTNUM . MOD ID
   58              | INTNUM . MOD INTNUM
   59              | INTNUM . MOD FLOATNUM

    ADDITION        shift, and go to state 58
    SUBTRACTION     shift, and go to state 59
    MULTIPLICATION  shift, and go to state 60
    DIVISION        shift, and go to state 61
    MOD             shift, and go to state 62


State 10

   24 sum_operation: FLOATNUM . ADDITION ID
   25              | FLOATNUM . ADDITION INTNUM
   26              | FLOATNUM . ADDITION FLOATNUM
   33 sub_operation: FLOATNUM . SUBTRACTION ID
   34              | FLOATNUM . SUBTRACTION INTNUM
   35              | FLOATNUM . SUBTRACTION FLOATNUM
   42 mult_operation: FLOATNUM . MULTIPLICATION ID
   43               | FLOATNUM . MULTIPLICATION INTNUM
   44               | FLOATNUM . MULTIPLICATION FLOATNUM
   51 div_operation: FLOATNUM . DIVISION ID
   52              | FLOATNUM . DIVISION INTNUM
   53              | FLOATNUM . DIVISION FLOATNUM
   60 mod_operation: FLOATNUM . MOD ID
   61              | FLOATNUM . MOD INTNUM
   62              | FLOATNUM . MOD FLOATNUM

    ADDITION        shift, and go to state 63
    SUBTRACTION     shift, and go to state 64
    MULTIPLICATION  shift, and go to state 65
    DIVISION        shift, and go to state 66
    MOD             shift, and go to state 67


State 11

  140 stdin_func: GETS . ID

    ID  shift, and go to state 68


State 12

  141 stdout_func: PUTS . ID
  142            | PUTS . CHAR
  143            | PUTS . INTNUM
  144            | PUTS . FLOATNUM

    ID        shift, and go to state 69
    CHAR      shift, and go to state 70
    INTNUM    shift, and go to state 71
    FLOATNUM  shift, and go to state 72


State 13

  145 stdout_ln_func: PUTSLN . ID
  146               | PUTSLN . CHAR
  147               | PUTSLN . INTNUM
  148               | PUTSLN . FLOATNUM

    ID        shift, and go to state 73
    CHAR      shift, and go to state 74
    INTNUM    shift, and go to state 75
    FLOATNUM  shift, and go to state 76


State 14

  135 selection_statement: SELECTION_IF . LPAREN compound_conditional RPAREN LBRACE statement_list RBRACE
  136                    | SELECTION_IF . LPAREN compound_conditional RPAREN LBRACE statement_list RBRACE SELECTION_ELSE LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 77


State 15

  165 for_loop: LOOP_FOR . LPAREN optional_assignment SEMI optional_conditional SEMI optional_increment RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 78


State 16

  173 dowhile_loop: LOOP_DOWHILE . LBRACE statement_list RBRACE LOOP_WHILE LPAREN compound_conditional RPAREN

    LBRACE  shift, and go to state 79


State 17

  172 while_loop: LOOP_WHILE . LPAREN compound_conditional RPAREN RBRACE statement_list LBRACE

    LPAREN  shift, and go to state 80


State 18

   13 statement_list: statement .

    $default  reduce using rule 13 (statement_list)


State 19

    1 program: HOWDY_PARTNER statement_list . SO_LONG_PARTNER
   14 statement_list: statement_list . statement

    SO_LONG_PARTNER  shift, and go to state 81
    ID               shift, and go to state 3
    INT              shift, and go to state 4
    FLOAT            shift, and go to state 5
    CHAR             shift, and go to state 6
    STRUCT           shift, and go to state 7
    FUNC             shift, and go to state 8
    INTNUM           shift, and go to state 9
    FLOATNUM         shift, and go to state 10
    GETS             shift, and go to state 11
    PUTS             shift, and go to state 12
    PUTSLN           shift, and go to state 13
    SELECTION_IF     shift, and go to state 14
    LOOP_FOR         shift, and go to state 15
    LOOP_DOWHILE     shift, and go to state 16
    LOOP_WHILE       shift, and go to state 17

    statement                go to state 82
    declaration_statement    go to state 20
    sum_operation            go to state 21
    sub_operation            go to state 22
    mult_operation           go to state 23
    div_operation            go to state 24
    mod_operation            go to state 25
    arithmetic_operation     go to state 26
    selection_statement      go to state 27
    std_in_out_statement     go to state 28
    stdin_func               go to state 29
    stdout_func              go to state 30
    stdout_ln_func           go to state 31
    function_declaration     go to state 32
    function_call            go to state 33
    struct_definition        go to state 34
    struct_member_reference  go to state 35
    iteration_statment       go to state 36
    for_loop                 go to state 37
    while_loop               go to state 38
    dowhile_loop             go to state 39
    assignment_statement     go to state 40
    array_definition         go to state 41
    array_reference          go to state 42


State 20

    2 statement: declaration_statement . SEMI

    SEMI  shift, and go to state 83


State 21

   63 arithmetic_operation: sum_operation .

    $default  reduce using rule 63 (arithmetic_operation)


State 22

   64 arithmetic_operation: sub_operation .

    $default  reduce using rule 64 (arithmetic_operation)


State 23

   65 arithmetic_operation: mult_operation .

    $default  reduce using rule 65 (arithmetic_operation)


State 24

   66 arithmetic_operation: div_operation .

    $default  reduce using rule 66 (arithmetic_operation)


State 25

   67 arithmetic_operation: mod_operation .

    $default  reduce using rule 67 (arithmetic_operation)


State 26

    3 statement: arithmetic_operation . SEMI

    SEMI  shift, and go to state 84


State 27

    4 statement: selection_statement .

    $default  reduce using rule 4 (statement)


State 28

    5 statement: std_in_out_statement . SEMI

    SEMI  shift, and go to state 85


State 29

  137 std_in_out_statement: stdin_func .

    $default  reduce using rule 137 (std_in_out_statement)


State 30

  138 std_in_out_statement: stdout_func .

    $default  reduce using rule 138 (std_in_out_statement)


State 31

  139 std_in_out_statement: stdout_ln_func .

    $default  reduce using rule 139 (std_in_out_statement)


State 32

    6 statement: function_declaration .

    $default  reduce using rule 6 (statement)


State 33

    7 statement: function_call . SEMI

    SEMI  shift, and go to state 86


State 34

    8 statement: struct_definition .

    $default  reduce using rule 8 (statement)


State 35

    9 statement: struct_member_reference . SEMI
  181 assignment_statement: struct_member_reference . ASSIGNMENT_OPERATOR ID
  182                     | struct_member_reference . ASSIGNMENT_OPERATOR FLOATNUM
  183                     | struct_member_reference . ASSIGNMENT_OPERATOR INTNUM
  184                     | struct_member_reference . ASSIGNMENT_OPERATOR function_call
  185                     | struct_member_reference . ASSIGNMENT_OPERATOR arithmetic_operation
  186                     | struct_member_reference . ASSIGNMENT_OPERATOR struct_member_reference
  187                     | struct_member_reference . ASSIGNMENT_OPERATOR array_reference

    SEMI                 shift, and go to state 87
    ASSIGNMENT_OPERATOR  shift, and go to state 88


State 36

   11 statement: iteration_statment .

    $default  reduce using rule 11 (statement)


State 37

  162 iteration_statment: for_loop .

    $default  reduce using rule 162 (iteration_statment)


State 38

  163 iteration_statment: while_loop .

    $default  reduce using rule 163 (iteration_statment)


State 39

  164 iteration_statment: dowhile_loop .

    $default  reduce using rule 164 (iteration_statment)


State 40

   10 statement: assignment_statement . SEMI

    SEMI  shift, and go to state 89


State 41

   12 statement: array_definition . SEMI

    SEMI  shift, and go to state 90


State 42

  188 assignment_statement: array_reference . ASSIGNMENT_OPERATOR ID
  189                     | array_reference . ASSIGNMENT_OPERATOR FLOATNUM
  190                     | array_reference . ASSIGNMENT_OPERATOR INTNUM
  191                     | array_reference . ASSIGNMENT_OPERATOR function_call
  192                     | array_reference . ASSIGNMENT_OPERATOR arithmetic_operation
  193                     | array_reference . ASSIGNMENT_OPERATOR struct_member_reference
  194                     | array_reference . ASSIGNMENT_OPERATOR array_reference

    ASSIGNMENT_OPERATOR  shift, and go to state 91


State 43

    0 $accept: program $end .

    $default  accept


State 44

  161 struct_member_reference: ID DOT . ID

    ID  shift, and go to state 92


State 45

   18 sum_operation: ID ADDITION . ID
   19              | ID ADDITION . INTNUM
   20              | ID ADDITION . FLOATNUM

    ID        shift, and go to state 93
    INTNUM    shift, and go to state 94
    FLOATNUM  shift, and go to state 95


State 46

   27 sub_operation: ID SUBTRACTION . ID
   28              | ID SUBTRACTION . INTNUM
   29              | ID SUBTRACTION . FLOATNUM

    ID        shift, and go to state 96
    INTNUM    shift, and go to state 97
    FLOATNUM  shift, and go to state 98


State 47

   36 mult_operation: ID MULTIPLICATION . ID
   37               | ID MULTIPLICATION . INTNUM
   38               | ID MULTIPLICATION . FLOATNUM

    ID        shift, and go to state 99
    INTNUM    shift, and go to state 100
    FLOATNUM  shift, and go to state 101


State 48

   45 div_operation: ID DIVISION . ID
   46              | ID DIVISION . INTNUM
   47              | ID DIVISION . FLOATNUM

    ID        shift, and go to state 102
    INTNUM    shift, and go to state 103
    FLOATNUM  shift, and go to state 104


State 49

   54 mod_operation: ID MOD . ID
   55              | ID MOD . INTNUM
   56              | ID MOD . FLOATNUM

    ID        shift, and go to state 105
    INTNUM    shift, and go to state 106
    FLOATNUM  shift, and go to state 107


State 50

  156 function_call: ID LPAREN . parameter_list RPAREN

    ID  shift, and go to state 108

    $default  reduce using rule 159 (parameter_list)

    parameter_list  go to state 109


State 51

  174 assignment_statement: ID ASSIGNMENT_OPERATOR . ID
  175                     | ID ASSIGNMENT_OPERATOR . FLOATNUM
  176                     | ID ASSIGNMENT_OPERATOR . INTNUM
  177                     | ID ASSIGNMENT_OPERATOR . function_call
  178                     | ID ASSIGNMENT_OPERATOR . arithmetic_operation
  179                     | ID ASSIGNMENT_OPERATOR . struct_member_reference
  180                     | ID ASSIGNMENT_OPERATOR . array_reference

    ID        shift, and go to state 110
    INTNUM    shift, and go to state 111
    FLOATNUM  shift, and go to state 112

    sum_operation            go to state 21
    sub_operation            go to state 22
    mult_operation           go to state 23
    div_operation            go to state 24
    mod_operation            go to state 25
    arithmetic_operation     go to state 113
    function_call            go to state 114
    struct_member_reference  go to state 115
    array_reference          go to state 116


State 52

  198 array_reference: ID RBRACKET . INTNUM LBRACKET

    INTNUM  shift, and go to state 117


State 53

   15 declaration_statement: INT ID .
  195 array_definition: INT ID . RBRACKET INTNUM LBRACKET

    RBRACKET  shift, and go to state 118

    $default  reduce using rule 15 (declaration_statement)


State 54

   16 declaration_statement: FLOAT ID .
  196 array_definition: FLOAT ID . RBRACKET INTNUM LBRACKET

    RBRACKET  shift, and go to state 119

    $default  reduce using rule 16 (declaration_statement)


State 55

   17 declaration_statement: CHAR ID .
  197 array_definition: CHAR ID . RBRACKET INTNUM LBRACKET

    RBRACKET  shift, and go to state 120

    $default  reduce using rule 17 (declaration_statement)


State 56

  160 struct_definition: STRUCT ID . LBRACE declaration_list RBRACE

    LBRACE  shift, and go to state 121


State 57
